--- a/views/blog/index.pug
+++ b/views/blog/index.pug
@@ -114,10 +114,10 @@ block content
         var logoPath = "#{settings.LogoPath}";
         var jiathis_config = {
             data_track_clickback: true,
-            url: "http://#{settings.SiteDomain}",
+            url: "https://#{settings.SiteDomain}",
             summary: "",
             title: "#{settings.SiteName}"
         };
-    script(type='text/javascript', src='http://v3.jiathis.com/code/jia.js?uid=#{settings.JiaThisId}', charset='utf-8')
+    script(type='text/javascript', src='https://v3.jiathis.com/code/jia.js?uid=#{settings.JiaThisId}', charset='utf-8')
     script(type='text/javascript', src='/static/jquery-qrcode/dist/jquery-qrcode.min.js', charset='utf-8')
     script(type='text/javascript', src='/static/js/top.js', charset='utf-8')
