--- a/views/admin/settings.pug
+++ b/views/admin/settings.pug
@@ -135,7 +135,7 @@ block content
                                                     li.list-group-item.clearfix
                                                         .pull-left
                                                             | #{__("admin.settings.analysis")}(
-                                                            a(href='http://tongji.baidu.com', target='_blank')=__("admin.settings.analysis_service")
+                                                            a(href='https://tongji.baidu.com', target='_blank')=__("admin.settings.analysis_service")
                                                             | )
                                                         .pull-right
                                                             input#EnableStatistics(type='hidden', name='EnableStatistics', value=settings.EnableStatistics)
