--- a/views/admin/index.pug
+++ b/views/admin/index.pug
@@ -8,7 +8,7 @@ block content
             .col-lg-12
                 .ibox
                     .ibox-content
-                        iframe(src='http://tongji.baidu.com', style='width: 100%; min-height: 5000px; border: none;')
+                        iframe(src='https://tongji.baidu.com', style='width: 100%; min-height: 5000px; border: none;')
     script(type='text/javascript', src='/static/jquery/dist/jquery.min.js', charset='utf-8')
     script(type='text/javascript', src='/static/bootstrap/dist/js/bootstrap.min.js', charset='utf-8')
     script(type='text/javascript', src='/static/metismenu/dist/metisMenu.min.js', charset='utf-8')
