--- a/views/admin/settings.pug
+++ b/views/admin/settings.pug
@@ -161,7 +161,7 @@ block content
                                                     li.list-group-item.clearfix
                                                         .pull-left
                                                             | #{__("admin.settings.comments")} (
-                                                            a(href='http://changyan.kuaizhan.com', target='_blank')=__("admin.settings.comments_service")
+                                                            a(href='https://changyan.kuaizhan.com', target='_blank')=__("admin.settings.comments_service")
                                                             | )
                                                         .pull-right
                                                             input#ShowComments(type='hidden', name='ShowComments', value=settings.ShowComments)
@@ -169,7 +169,7 @@ block content
                                                     li.list-group-item.clearfix
                                                         .pull-left
                                                             | #{__("admin.settings.message")} (
-                                                            a(href='http://changyan.kuaizhan.com', target='_blank')=__("admin.settings.comments_service")
+                                                            a(href='https://changyan.kuaizhan.com', target='_blank')=__("admin.settings.comments_service")
                                                                 | )
                                                         .pull-right
                                                             input#ShowGuestbook(type='hidden', name='ShowGuestbook', value=settings.ShowGuestbook)
