--- a/views/shared/layout.pug
+++ b/views/shared/layout.pug
@@ -4,8 +4,8 @@ html(lang='zh-CN')
         meta(http-equiv='Content-Type', content='text/html; charset=utf-8')
         meta(charset='utf-8')
         meta(name='viewport', content='width=device-width, initial-scale=1.0')
-        meta(name='keywords', content=`${keywords ? keywords : "blog,iBlog"}`)
-        meta(name='description', content=`${description ? description : "iBlog"}`)
+        meta(name='keywords', content=`${keywords ? keywords : "妈妈去哪儿产品部博客,wwb博客,开源博客"}`)
+        meta(name='description', content=`${description ? description : "妈妈去哪儿产品部博客"}`)
         link(href='/static/bootstrap/dist/css/bootstrap.min.css', rel='stylesheet')
         link(href='/static/css/bootstrap-addon.css', rel='stylesheet')
         link(href='/static/css/site.css', rel='stylesheet')
